examples/python-web-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pythonapp
spec:
  type: NodePort
  selector:
    app: sample-python-app
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30007
